--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "standard",
-    "standard-react"
+    "prettier",
+    "prettier/react",
+    "prettier/standard",
+    "eslint:recommended",
+    "plugin:react/recommended"
   ],
   "env": {
     "es6": true
@@ -14,14 +17,4 @@
     "sourceType": "module",
     "allowImportExportEverywhere": true
   },
-  "rules": {
-    // don't force es6 functions to include space before paren
-    "space-before-function-paren": 0,
-
-    // allow specifying true explicitly for boolean props
-    "react/jsx-boolean-value": 0,
-
-    // allow imports mixed with non-import statements at top of file
-    "import/first": 0
-  }
 }
