--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "test": "react-scripts test --env=jsdom",
     "build": "rollup -c",
     "start": "rollup -c -w",
+    "lint": "eslint src",
     "prepublish": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "hoist-non-react-statics": "^2.3.1",
+    "react-broadcast": "^0.6.1"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^0.14.9 || ^15.0.0 || ^16.0.0",
@@ -33,6 +37,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.14.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "10",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.8.0",
