--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "gh-pages": "^1.0.0",
+    "knockout": "^3.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^1.0.17",
+    "react-test-renderer": "^16.2.0",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.1",
