--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-knockout",
-  "version": "1.0.4",
-  "description":
-    "Utilities to connect Knockout observables to React components",
+  "version": "1.0.5",
+  "description": "Utilities to connect Knockout observables to React components",
   "author": "Ville Vaarala",
   "license": "MIT",
   "repository": {
@@ -62,5 +61,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-postcss": "^0.5.5"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
