--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js:
-  - "8"
+  - "lts/boron"
+  - "lts/carbon"
+  - "stable"
+install:
+  - yarn install --frozen-lockfile
 script:
-  - npm run lint
-  - npm run test
-  - npm run build
+  - yarn lint
+  - yarn test
+  - yarn build
