--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:vaaralav/react-knockout.git"
+    "url": "git://github.com/vaaralav/react-knockout.git"
   },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -49,7 +49,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "gh-pages": "^1.0.0",
     "knockout": "^3.4.2",
-    "prettier": "1.10.2",
+    "prettier": "1.13.4",
     "prettylint": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
